= ActiveMerchant CHANGELOG

* Fix failing CyberSource remote test [Patrick Joyce]
* Support for Garanti Sanal Pos: Turkish bank and billing gateway [Selem Delul]
* Add deprecation note for Money objects to Bogus gateway [Soleone]
* Updated test URL for Merchant eSolutions and added valid remote test credentials [Soleone]
* Add new error class for SSL certificate problems in connection class  [Soleone]
* Update valid_month and valid_expiry_year to coerce string arguments to integers [cody]
* Add support for displaying credit cards with PayPal Express. Use the :allow_guest_checkout => true option when setting up the transaction [Edward Ocampo-Gooding]
* Use card_brand method for checking for checks in Sage and Beanstream [cody]
* Add JCB and Diners Club to LinkPoint [Soleone]

== Version 1.5.1 (February 14, 2010)

* Cleanup Rakefile, add gemspec and prepare for 1.5.1 release [cody]
* Update copyright dates [cody]
* Work around SkipJack bug by reversing the order of the query params [Soleone]
* Fix uppercase character in autoload of 2Checkout's Notification class [Edward Ocampo-Gooding]
* Detect language used in Chronopay integration based on billing address country [Soleone]
* Better handle international addresses in BeanstreamGateway [Soleone]

== Version 1.5.0 (February 2, 2010)

* Fix Gestpay notification to avoid Ruby 1.9 warnings [cody]
* Fix Chronopay notification time parsing for Ruby 1.9 [Joe Van Dyk]
* Set default currency of Braintree to USD [cody]
* Fix QuickPay helper for Ruby 1.9 compat [cody]
* Use String#each_line instead of collect in PaySecureGateway for Ruby 1.9 compat [cody]
* Use String#each_line instead of to_a in SagePayGateway for Ruby 1.9 compat [cody]
* Don't return an array when finding the country code. Fixes issue with Ruby 1.9 [cody]
* Fix custom assertions for Ruby 1.9 [cody]
* Deprecate Money objects [cody]
* Update JCB rejex to catch all valid PANs [pjhyett]
* Remove old TransaXGateway constant [cody]